overflow issue fixed

--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -1,4 +1,6 @@
 .about {
+  background-color: #df8908;
+  overflow: hidden;
   display: flex;
   flex-direction: column;
   align-items: center;
